fix: router outlet should not allow overflow (#856)

--- a/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/component-sidenav/component-sidenav.scss
+++ b/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/component-sidenav/component-sidenav.scss
@@ -24,6 +24,7 @@ app-component-sidenav {
   // The rule will match the element following the router-outlet which will be the routed component.
   router-outlet + * {
     flex-grow: 1;
+    overflow: hidden;
   }
 }
 
